fix readme and minor bug in file location

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resolve-url-loader",
-  "version": "1.0.0",
-  "description": "Webpack loader that resolves an absolute path of url() statements based on the original file",
+  "version": "1.0.1",
+  "description": "Webpack loader that resolves relative paths in url() statements based on the original source file",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
