--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resolve-url-loader",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Webpack loader that resolves relative paths in url() statements based on the original source file",
   "main": "index.js",
   "scripts": {
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/bholloway/resolve-url-loader",
   "dependencies": {
+    "loader-utils": "^0.2.11",
     "rework": "^1.0.1",
     "rework-visit": "^1.0.0",
     "source-map": "^0.1.43"
