fix to absolute path transformation, fix to source-map output

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/bholloway/resolve-url-loader",
   "dependencies": {
+    "convert-source-map": "^1.1.1",
     "loader-utils": "^0.2.11",
     "rework": "^1.0.1",
     "rework-visit": "^1.0.0",
