--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resolve-url-loader",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "Webpack loader that resolves relative paths in url() statements based on the original source file",
   "main": "index.js",
   "repository": {
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/bholloway/resolve-url-loader",
   "dependencies": {
+    "camelcase": "^1.2.1",
     "convert-source-map": "^1.1.1",
     "loader-utils": "^0.2.11",
     "rework": "^1.0.1",
