--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "camelcase": "^1.2.1",
     "convert-source-map": "^1.1.1",
     "loader-utils": "^0.2.11",
+    "lodash.defaults": "^3.1.2",
     "rework": "^1.0.1",
     "rework-visit": "^1.0.0",
     "source-map": "^0.1.43"
