--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "convert-source-map": "^1.1.1",
     "loader-utils": "^1.0.0",
     "lodash.defaults": "^4.0.0",
-    "rework": "^1.0.1",
-    "rework-visit": "^1.0.0",
+    "postcss": "^6.0.17",
     "source-map": "^0.5.6",
     "urix": "^0.1.0"
   }
