--- a/package.json
+++ b/package.json
@@ -35,5 +35,11 @@
     "rework-visit": "^1.0.0",
     "source-map": "^0.5.6",
     "urix": "^0.1.0"
+  },
+  "devDependencies": {
+    "jshint": "^2.9.5"
+  },
+  "scripts": {
+    "lint": "jshint index.js lib"
   }
 }
