--- a/package.json
+++ b/package.json
@@ -1,67 +1,29 @@
 {
-  "name": "resolve-url-loader",
-  "version": "2.3.1",
-  "description": "Webpack loader that resolves relative paths in url() statements based on the original source file",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bholloway/resolve-url-loader.git"
-  },
-  "keywords": [
-    "webpack",
-    "loader",
-    "css",
-    "normalize",
-    "rewrite",
-    "resolve",
-    "url",
-    "sass",
-    "relative",
-    "file"
-  ],
   "author": "bholloway",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/bholloway/resolve-url-loader/issues"
-  },
-  "homepage": "https://github.com/bholloway/resolve-url-loader",
-  "files": [
-    "index.js",
-    "lib"
+  "private": true,
+  "workspaces": [
+    "packages/*"
   ],
-  "dependencies": {
-    "adjust-sourcemap-loader": "^1.1.0",
-    "camelcase": "^4.1.0",
-    "convert-source-map": "^1.5.1",
-    "cross-env": "^5.1.5",
-    "loader-utils": "^1.1.0",
-    "lodash.defaults": "^4.0.0",
-    "rework": "^1.0.1",
-    "rework-visit": "^1.0.0",
-    "source-map": "^0.5.7",
-    "urix": "^0.1.0"
+  "scripts": {
+    "lint": "jshint --exclude **/node_modules test",
+    "test": "tape test | tap-diff",
+    "test:webpack1": "cross-env ONLY='webpack1*' npm run test",
+    "test:webpack2": "cross-env ONLY='webpack2*' npm run test",
+    "test:webpack3": "cross-env ONLY='webpack3*' npm run test",
+    "test:webpack4": "cross-env ONLY='webpack4*' npm run test"
   },
   "devDependencies": {
     "blue-tape": "^1.0.0",
     "compose-function": "^3.0.3",
     "es6-promisify": "^6.0.0",
     "get-value": "^3.0.1",
-    "joi": "^13.1.2",
-    "jshint": "^2.9.5",
+    "joi": "^12.0.0",
     "micromatch": "^3.1.10",
     "ms": "^2.1.1",
     "outdent": "^0.5.0",
     "promise-compose": "^1.1.2",
     "recursive-readdir": "^2.2.2",
     "tap-diff": "^0.1.1"
-  },
-  "scripts": {
-    "lint": "jshint --exclude **/node_modules index.js lib test",
-    "pretest": "cd ./test/test-my-cli && npm install",
-    "test": "tape test | tap-diff",
-    "test:webpack1": "cross-env ONLY='webpack1*' npm run test",
-    "test:webpack2": "cross-env ONLY='webpack2*' npm run test",
-    "test:webpack3": "cross-env ONLY='webpack3*' npm run test",
-    "test:webpack4": "cross-env ONLY='webpack4*' npm run test"
   }
 }
