--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "outdent": "^0.5.0",
     "promise-compose": "^1.1.2",
     "recursive-readdir": "^2.2.2",
+    "regx": "^1.0.4",
     "tap-diff": "^0.1.1"
+  },
+  "dependencies": {
+    "escape-string-regexp": "^1.0.5"
   }
 }
