--- a/package.json
+++ b/package.json
@@ -12,19 +12,18 @@
   "devDependencies": {
     "blue-tape": "^1.0.0",
     "compose-function": "^3.0.3",
+    "cross-env": "^5.1.5",
     "es6-promisify": "^6.0.0",
+    "escape-string-regexp": "^1.0.5",
     "get-value": "^3.0.0",
     "has-prop": "^0.1.2",
     "joi": "^12.0.0",
+    "jshint": "^2.9.5",
     "micromatch": "^3.1.10",
     "ms": "^2.1.1",
     "outdent": "^0.5.0",
     "promise-compose": "^1.1.2",
     "recursive-readdir": "^2.2.2",
-    "regx": "^1.0.4",
     "tap-diff": "^0.1.1"
-  },
-  "dependencies": {
-    "escape-string-regexp": "^1.0.5"
   }
 }
