--- a/packages/resolve-url-loader/package.json
+++ b/packages/resolve-url-loader/package.json
@@ -39,6 +39,7 @@
     "convert-source-map": "^1.5.1",
     "loader-utils": "^1.1.0",
     "lodash.defaults": "^4.0.0",
+    "postcss": "^7.0.0",
     "rework": "^1.0.1",
     "rework-visit": "^1.0.0",
     "source-map": "^0.5.7"
