--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   ],
   "scripts": {
     "lint": "jshint --exclude **/node_modules test",
-    "test": "tape test | tap-diff"
+    "test:unit": "tape **/*.spec.js | tap-diff",
+    "test:e2e": "tape test | tap-diff"
   },
   "devDependencies": {
     "blue-tape": "^1.0.0",
