--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "outdent": "^0.5.0",
     "promise-compose": "^1.1.2",
     "recursive-readdir": "^2.2.2",
-    "tap-diff": "^0.1.1"
+    "tap-diff": "^0.1.1",
+    "vlq": "^1.0.0"
   }
 }
