--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "lint": "jshint packages --exclude **/node_modules",
     "test:unit": "tape **/*.spec.js | tap-diff",
-    "test:e2e": "tape test | tap-diff"
+    "test:e2e": "tape test | tap-diff",
+    "debug:e2e": "node $NODE_DEBUG_OPTION $(npm bin)/tape test | tap-diff"
   },
   "devDependencies": {
     "blue-tape": "^1.0.0",
