--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "get-value": "^3.0.0",
     "has-prop": "^0.1.2",
     "joi": "^12.0.0",
-    "jshint": "^2.9.5",
+    "jshint": "^2.10.1",
     "micromatch": "^3.1.10",
     "ms": "^2.1.1",
     "outdent": "^0.5.0",
@@ -28,5 +28,8 @@
     "recursive-readdir": "^2.2.2",
     "tap-diff": "^0.1.1",
     "vlq": "^1.0.0"
+  },
+  "engines": {
+    "node": ">=6.0.0"
   }
 }
