--- a/packages/resolve-url-loader/package.json
+++ b/packages/resolve-url-loader/package.json
@@ -37,14 +37,14 @@
   },
   "dependencies": {
     "adjust-sourcemap-loader": "2.0.0",
-    "camelcase": "^4.1.0",
-    "compose-function": "^3.0.3",
-    "convert-source-map": "^1.5.1",
-    "es6-iterator": "^2.0.3",
-    "loader-utils": "^1.1.0",
-    "postcss": "^7.0.0",
-    "rework": "^1.0.1",
-    "rework-visit": "^1.0.0",
-    "source-map": "^0.5.7"
+    "camelcase": "5.0.0",
+    "compose-function": "3.0.3",
+    "convert-source-map": "1.6.0",
+    "es6-iterator": "2.0.3",
+    "loader-utils": "1.2.3",
+    "postcss": "7.0.14",
+    "rework": "1.0.1",
+    "rework-visit": "1.0.0",
+    "source-map": "0.6.1"
   }
 }
