Remove superfluous files, remove v3 prerelease message

--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
   "devDependencies": {
     "jshint": "^2.9.5"
   },
+  "files": [
+    "index.js",
+    "lib"
+  ],
   "scripts": {
     "lint": "jshint index.js lib"
   }
