utilise multiple startPosApparent to support postcss variables

--- a/packages/resolve-url-loader/package.json
+++ b/packages/resolve-url-loader/package.json
@@ -30,7 +30,7 @@
   },
   "files": [
     "index.js",
-    "lib"
+    "lib/**/+([a-z-]).js"
   ],
   "scripts": {
     "lint": "jshint --exclude **/node_modules index.js lib"
