--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "scripts": {
     "lint": "jshint packages --exclude **/node_modules",
-    "test:unit": "tape **/*.spec.js | tap-diff",
+    "test:unit": "tape **/*.test.js | tap-diff",
     "test:e2e": "tape test | tap-diff",
     "debug:e2e": "node $NODE_DEBUG_OPTION $(npm bin)/tape test | tap-diff"
   },
