--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "lint": "jshint packages --exclude **/node_modules",
     "test:unit": "tape **/*.test.js | tap-diff",
+    "debug:unit": "node $NODE_DEBUG_OPTION $(npm bin)/tape **/*.test.js | tap-diff",
     "test:e2e": "tape test | tap-diff",
     "debug:e2e": "node $NODE_DEBUG_OPTION $(npm bin)/tape test | tap-diff"
   },
