--- a/packages/resolve-url-loader/package.json
+++ b/packages/resolve-url-loader/package.json
@@ -40,6 +40,7 @@
     "compose-function": "3.0.3",
     "convert-source-map": "1.7.0",
     "es6-iterator": "2.0.3",
+    "es6-symbol": "^3.1.1",
     "loader-utils": "1.2.3",
     "postcss": "7.0.21",
     "rework": "1.0.1",
