--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "lint": "jshint packages --exclude **/node_modules",
-    "test:unit": "tape **/*.test.js | tap-diff",
+    "test:unit": "tape \"!(node_modules)/**/*.test.js\" | tap-diff",
     "debug:unit": "node $NODE_DEBUG_OPTION $(npm bin)/tape **/*.test.js | tap-diff",
     "test:e2e": "tape test | tap-diff",
     "debug:e2e": "node $NODE_DEBUG_OPTION $(npm bin)/tape test | tap-diff"
@@ -30,6 +30,7 @@
     "outdent": "0.7.0",
     "promise-compose": "1.1.2",
     "recursive-readdir": "2.2.2",
+    "sinon": "^8.0.2",
     "tap-diff": "0.1.1",
     "vlq": "1.0.1"
   },
