use version ranges to reduce package duplication

--- a/packages/resolve-url-loader/package.json
+++ b/packages/resolve-url-loader/package.json
@@ -36,10 +36,10 @@
     "lint": "jshint --exclude **/node_modules index.js lib"
   },
   "dependencies": {
-    "adjust-sourcemap-loader": "2.0.0",
-    "convert-source-map": "1.7.0",
-    "loader-utils": "1.2.3",
-    "postcss": "7.0.21",
+    "adjust-sourcemap-loader": "^2.0.0",
+    "convert-source-map": "^1.7.0",
+    "loader-utils": "^1.4.0",
+    "postcss": "^7.0.32",
     "rework": "1.0.1",
     "rework-visit": "1.0.0",
     "source-map": "0.6.1"
