--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "blue-tape": "1.0.0",
     "compose-function": "3.0.3",
     "cross-env": "5.2.1",
+    "enforce-node-version": "^0.1.0",
     "es6-promisify": "6.0.2",
     "escape-string-regexp": "1.0.5",
     "get-value": "3.0.1",
