update dependencies and remove unneeded shims

--- a/package.json
+++ b/package.json
@@ -16,26 +16,26 @@
     "debug:e2e": "node $NODE_DEBUG_OPTION $(npm bin)/tape test | tap-diff"
   },
   "devDependencies": {
-    "blue-tape": "1.0.0",
-    "compose-function": "3.0.3",
-    "cross-env": "5.2.1",
+    "blue-tape": "^1.0.0",
+    "compose-function": "^3.0.3",
+    "cross-env": "^5.2.1",
     "enforce-node-version": "^0.1.0",
-    "es6-promisify": "6.0.2",
-    "escape-string-regexp": "1.0.5",
-    "get-value": "3.0.1",
-    "has-prop": "0.1.2",
-    "joi": "14.3.1",
-    "jshint": "2.10.3",
-    "micromatch": "3.1.10",
-    "ms": "2.1.2",
-    "outdent": "0.7.0",
-    "promise-compose": "1.1.2",
-    "recursive-readdir": "2.2.2",
+    "es6-promisify": "^6.0.2",
+    "escape-string-regexp": "^1.0.5",
+    "get-value": "^3.0.1",
+    "has-prop": "^0.1.2",
+    "joi": "^14.3.1",
+    "jshint": "^2.10.3",
+    "micromatch": "^3.1.10",
+    "ms": "^2.1.2",
+    "outdent": "^0.7.0",
+    "promise-compose": "^1.1.2",
+    "recursive-readdir": "^2.2.2",
     "sinon": "^8.0.2",
-    "tap-diff": "0.1.1",
-    "vlq": "1.0.1"
+    "tap-diff": "^0.1.1",
+    "vlq": "^1.0.1"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=8.9"
   }
 }
