--- a/packages/sourcemap-to-string/package.json
+++ b/packages/sourcemap-to-string/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/bholloway/resolve-url-loader",
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=8.9"
   },
   "directories": {
     "lib": "lib"
@@ -25,16 +25,12 @@
   "scripts": {},
   "dependencies": {
     "array.prototype.flatmap": "^1.2.2",
-    "compose-function": "3.0.3",
+    "compose-function": "^3.0.3",
     "convert-source-map": "^1.7.0",
-    "convict": "^5.2.0",
+    "convict": "^6.0.0",
     "get-value": "^3.0.1",
-    "object.entries": "^1.1.0",
-    "object.values": "^1.1.0",
     "promise-compose": "^1.1.2",
-    "string.prototype.padend": "^3.0.0",
-    "util.promisify": "^1.0.0",
-    "vlq": "1.0.1",
+    "vlq": "^1.0.1",
     "word-wrap": "^1.2.3"
   }
 }
