--- a/packages/resolve-url-loader/package.json
+++ b/packages/resolve-url-loader/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/bholloway/resolve-url-loader/tree/master/packages/resolve-url-loader",
   "engines": {
-    "node": ">=8.9"
+    "node": "^10 || ^12 || >=14"
   },
   "files": [
     "index.js",
@@ -38,7 +38,7 @@
     "adjust-sourcemap-loader": "^4.0.0",
     "convert-source-map": "^1.7.0",
     "loader-utils": "^2.0.0",
-    "postcss": "^7.0.35",
+    "postcss": "^8.0.2",
     "source-map": "0.6.1"
   },
   "peerDependencies": {
