--- a/packages/resolve-url-loader/package.json
+++ b/packages/resolve-url-loader/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bholloway/resolve-url-loader.git"
+    "url": "git+https://github.com/bholloway/resolve-url-loader.git",
+    "directory": "packages/resolve-url-loader"
   },
   "keywords": [
     "webpack",
@@ -24,7 +25,7 @@
   "bugs": {
     "url": "https://github.com/bholloway/resolve-url-loader/issues"
   },
-  "homepage": "https://github.com/bholloway/resolve-url-loader",
+  "homepage": "https://github.com/bholloway/resolve-url-loader/tree/master/packages/resolve-url-loader",
   "engines": {
     "node": ">=8.9"
   },
@@ -32,9 +33,6 @@
     "index.js",
     "lib/**/+([a-z-]).js"
   ],
-  "scripts": {
-    "lint": "jshint --exclude **/node_modules index.js lib"
-  },
   "dependencies": {
     "adjust-sourcemap-loader": "^4.0.0",
     "convert-source-map": "^1.7.0",
