prepare for releasing beta and renaming branches

--- a/packages/resolve-url-loader/package.json
+++ b/packages/resolve-url-loader/package.json
@@ -32,7 +32,7 @@
   "files": [
     "index.js",
     "lib/**/+([a-z-]).js",
-    "docs/basic-problem.svg"
+    "docs/**/*.*"
   ],
   "dependencies": {
     "adjust-sourcemap-loader": "^4.0.0",
