--- a/packages/resolve-url-loader/package.json
+++ b/packages/resolve-url-loader/package.json
@@ -38,8 +38,8 @@
     "adjust-sourcemap-loader": "^4.0.0",
     "convert-source-map": "^1.7.0",
     "loader-utils": "^2.0.0",
-    "postcss": "^7.0.35",
-    "source-map": "0.6.1"
+    "postcss": "^8.2.10",
+    "source-map": "^0.7.3"
   },
   "peerDependencies": {
     "rework": "1.0.1",
