--- a/packages/resolve-url-loader/package.json
+++ b/packages/resolve-url-loader/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bholloway/resolve-url-loader.git"
+    "url": "git+https://github.com/bholloway/resolve-url-loader.git",
+    "directory": "packages/resolve-url-loader"
   },
   "keywords": [
     "webpack",
@@ -24,7 +25,7 @@
   "bugs": {
     "url": "https://github.com/bholloway/resolve-url-loader/issues"
   },
-  "homepage": "https://github.com/bholloway/resolve-url-loader",
+  "homepage": "https://github.com/bholloway/resolve-url-loader/tree/v3-maintenance/packages/resolve-url-loader",
   "engines": {
     "node": ">=6.0.0"
   },
