--- a/packages/resolve-url-loader/package.json
+++ b/packages/resolve-url-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resolve-url-loader",
-  "version": "4.0.0-beta.2",
+  "version": "4.0.0",
   "description": "Webpack loader that resolves relative paths in url() statements based on the original source file",
   "main": "index.js",
   "repository": {
