--- a/package.json
+++ b/package.json
@@ -18,30 +18,27 @@
   "devDependencies": {
     "blue-tape": "^1.0.0",
     "compose-function": "^3.0.3",
-    "cross-env": "^6.0.3",
+    "cross-env": "^7.0.3",
     "enforce-node-version": "^0.1.0",
     "es6-promisify": "^6.0.2",
-    "escape-string-regexp": "^2.0.0",
+    "escape-string-regexp": "^4.0.0",
     "get-value": "^3.0.1",
     "has-prop": "^0.1.2",
     "joi": "^14.3.1",
     "jshint": "^2.10.3",
-    "micromatch": "^4.0.2",
-    "ms": "^2.1.2",
-    "outdent": "^0.7.0",
+    "micromatch": "^4.0.4",
+    "ms": "^2.1.3",
+    "outdent": "^0.8.0",
     "promise-compose": "^1.1.2",
     "recursive-readdir": "^2.2.2",
-    "rework": "1.0.1",
-    "rework-visit": "1.0.0",
-    "sinon": "^8.0.2",
+    "sinon": "^10.0.0",
     "tap-diff": "^0.1.1",
     "vlq": "^1.0.1"
   },
   "engines": {
-    "node": ">=8.9"
+    "node": ">=12"
   },
   "resolutions": {
-    "diff": "^3.5.0",
-    "lodash": "^4.17.21"
+    "diff": "^4.0.2"
   }
 }
