add lint step to ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,8 @@ jobs:
             cache: 'yarn'
         - name: Install Dependencies
           run: yarn install
+        - name: Lint js
+          run: yarn lint
         - name: Unit test
           run: yarn test:unit
         - name: End-to-End test ${{ matrix.band }}
